Adds SwiftUI feature

--- a/HealthApp/Base.lproj/Main.storyboard
+++ b/HealthApp/Base.lproj/Main.storyboard
@@ -43,33 +43,17 @@
             </objects>
             <point key="canvasLocation" x="759.5419847328244" y="3.5211267605633805"/>
         </scene>
-        <!--Posture-->
-        <scene sceneID="4Id-it-ka4">
-            <objects>
-                <viewController id="BR6-pY-JZN" customClass="PostureViewController" customModule="HealthApp" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="zhl-YO-li0">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="f9d-1d-TmJ"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Posture" image="figure.stand" catalog="system" id="Mhf-SZ-QhZ"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="FAx-uS-LZh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="760" y="675"/>
-        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="lLP-ve-a4w">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="o9I-gl-vQ5" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="TabBarController" automaticallyAdjustsScrollViewInsets="NO" id="o9I-gl-vQ5" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="U07-t4-NQL">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="BR6-pY-JZN" kind="relationship" relationship="viewControllers" id="bh8-J4-zXm"/>
                         <segue destination="oB8-IR-33q" kind="relationship" relationship="viewControllers" id="Kdm-bV-P9N"/>
                     </connections>
                 </tabBarController>
@@ -79,7 +63,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="figure.stand" catalog="system" width="74" height="128"/>
         <image name="gear" catalog="system" width="128" height="122"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
